[gd_scene load_steps=4 format=3 uid="uid://bs6v8i0svh34"]

[ext_resource type="Script" uid="uid://dqytucw18xk6l" path="res://scenes/meteor.gd" id="1_tcwo0"]

[sub_resource type="Gradient" id="Gradient_fitd0"]
offsets = PackedFloat32Array(0, 0.51369864, 0.8287671)
colors = PackedColorArray(0.15187079, 0.08255986, 0.006703224, 1, 0.7581762, 0.47362685, 0.1888623, 1, 0.99739796, 0.0048948973, 0.9999998, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_tcwo0"]

[node name="Meteor" type="Area2D"]
scale = Vector2(3, 3)
script = ExtResource("1_tcwo0")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 9000
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 10.0
gravity = Vector2(0, -600)
radial_accel_min = 50.0
radial_accel_max = 150.0
color_ramp = SubResource("Gradient_fitd0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_tcwo0")

[node name="Kill_time" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Kill_time" to="." method="_on_kill_time_timeout"]
